test/T2/Fail/T2_badFuncName.ic
class Test{
	void bar(){
		return Bar();
	}
}